--- a/PatientManagementProject/src/View/Login.form
+++ b/PatientManagementProject/src/View/Login.form
@@ -23,12 +23,18 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jTabbedPane1" alignment="1" min="-2" pref="667" max="-2" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <Component id="jTabbedPane1" min="-2" pref="802" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jTabbedPane1" alignment="1" min="-2" pref="379" max="-2" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              <Component id="jTabbedPane1" min="-2" pref="459" max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -72,7 +78,7 @@
                           </Group>
                           <Component id="btn_login" alignment="0" min="-2" pref="98" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="384" max="32767" attributes="0"/>
+                      <EmptySpace pref="519" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -91,7 +97,7 @@
                           <Component id="lbl_password" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txt_password" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="142" max="32767" attributes="0"/>
+                      <EmptySpace pref="222" max="32767" attributes="0"/>
                       <Component id="btn_login" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -158,60 +164,61 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="lbl_loginTitle1" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="453" max="32767" attributes="0"/>
+                          <Group type="102" alignment="1" attributes="0">
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                              <Component id="btn_registerNew" min="-2" pref="98" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="73" max="-2" attributes="0"/>
+                              <Component id="lbl_newUserId" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="350" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Group type="102" attributes="0">
-                                      <Component id="btn_registerNew" min="-2" pref="98" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="101" max="-2" attributes="0"/>
-                                      <Component id="lbl_newUserId" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                      <Group type="102" attributes="0">
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="lbl_userId1" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="lbl_userId2" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="lbl_userId3" alignment="0" min="-2" max="-2" attributes="0"/>
-                                              <Component id="lbl_userId5" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="txt_fName" alignment="0" min="-2" pref="192" max="-2" attributes="0"/>
-                                              <Component id="txt_sex" min="-2" pref="192" max="-2" attributes="0"/>
-                                              <Component id="txt_lName" min="-2" pref="192" max="-2" attributes="0"/>
-                                              <Component id="spn_age" alignment="0" min="-2" pref="74" max="-2" attributes="0"/>
-                                          </Group>
-                                      </Group>
-                                      <Group type="102" attributes="0">
-                                          <Component id="lbl_userId4" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace max="32767" attributes="0"/>
-                                          <Component id="txt_newPassword" min="-2" pref="192" max="-2" attributes="0"/>
-                                      </Group>
-                                  </Group>
-                              </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                          <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" alignment="1" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="lbl_userId6" alignment="1" min="-2" max="-2" attributes="0"/>
-                                          <Component id="lbl_userId7" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lbl_loginTitle1" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                          <Group type="102" attributes="0">
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="lbl_userId1" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="lbl_userId2" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="lbl_userId3" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="lbl_userId5" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="txt_fName" alignment="0" min="-2" pref="192" max="-2" attributes="0"/>
+                                                  <Component id="txt_sex" min="-2" pref="192" max="-2" attributes="0"/>
+                                                  <Component id="txt_lName" min="-2" pref="192" max="-2" attributes="0"/>
+                                                  <Component id="spn_age" alignment="0" min="-2" pref="74" max="-2" attributes="0"/>
+                                              </Group>
+                                          </Group>
+                                          <Group type="102" attributes="0">
+                                              <Component id="lbl_userId4" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace max="32767" attributes="0"/>
+                                              <Component id="txt_newPassword" min="-2" pref="192" max="-2" attributes="0"/>
+                                          </Group>
                                       </Group>
-                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="txt_addressLineOne" min="-2" pref="192" max="-2" attributes="0"/>
-                                          <Component id="txt_city" min="-2" pref="192" max="-2" attributes="0"/>
+                                          <Group type="102" alignment="1" attributes="0">
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="lbl_userId6" alignment="1" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="lbl_userId7" alignment="1" min="-2" max="-2" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="txt_addressLineOne" min="-2" pref="192" max="-2" attributes="0"/>
+                                                  <Component id="txt_city" min="-2" pref="192" max="-2" attributes="0"/>
+                                              </Group>
+                                          </Group>
+                                          <Group type="102" alignment="1" attributes="0">
+                                              <Component id="lbl_userId8" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                              <Component id="txt_postCode" min="-2" pref="192" max="-2" attributes="0"/>
+                                          </Group>
                                       </Group>
-                                  </Group>
-                                  <Group type="102" alignment="1" attributes="0">
-                                      <Component id="lbl_userId8" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                      <Component id="txt_postCode" min="-2" pref="192" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                              <EmptySpace min="18" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -261,7 +268,7 @@
                           <Component id="txt_newPassword" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="lbl_userId4" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="90" max="32767" attributes="0"/>
+                      <EmptySpace pref="170" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="btn_registerNew" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                           <Component id="lbl_newUserId" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -346,7 +353,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="14" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Your new user ID is - "/>
+                <Property name="text" type="java.lang.String" value="Your new user ID is - #####    Use this to log on and get verified."/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="lbl_userId6">
